# ts_shampoo-server

./: .flake8  .gitignore  README.md  manage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: config.yml
apps/award/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/award/migrations/: 0001_initial.py
apps/career/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/career/migrations/: 0001_initial.py
apps/core/: helper.py  models.py
apps/gmail/: apps.py  urls.py  views.py
apps/home/: serializers.py  urls.py  views.py
apps/job/: apps.py  urls.py  views.py
apps/job/fixtures/: job.json
apps/mypage/: models.py  serializers.py  urls.py  views.py
apps/mypage/fixtures/: output.json
apps/mypage/migrations/: 0001_initial.py
apps/portfolio/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/portfolio/migrations/: 0001_initial.py  0002_initial.py
apps/profile/: apps.py  models.py  serializers.py  urls.py  views.py
apps/profile/migrations/: 0001_initial.py
apps/skill/: admin.py  models.py  serializers.py  urls.py  views.py
apps/skill/fixtures/: output.json
apps/skill/migrations/: 0001_initial.py
apps/tag/: apps.py  models.py  serializers.py  urls.py  views.py
apps/tag/fixtures/: job.json
apps/tag/migrations/: 0001_initial.py
apps/user/: admin.py  google.py  models.py  register.py  serializers.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  local.py
docs/: .gitmessage  setting.md  start.md
(+1 files in other folders)
